--- a/app/scss/modules/_header.scss
+++ b/app/scss/modules/_header.scss
@@ -1,7 +1,7 @@
 .header {
     height: 100vh;
     position: relative;
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 50%), linear-gradient(270deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 47.55%), url(/images/main-bg.jpg) 60% no-repeat;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 50%), linear-gradient(270deg, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 47.55%), url(../images/main-bg.jpg) 60% no-repeat;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
