--- a/app/scss/modules/_section-contact.scss
+++ b/app/scss/modules/_section-contact.scss
@@ -1,5 +1,5 @@
 .contact {
-    background: url(/images/bg-contacts.jpg) 50% no-repeat;
+    background: url(../images/bg-contacts.jpg) 50% no-repeat;
     background-repeat: no-repeat;
     background-size: cover;
     color: $tw;
